<resources>
    <string name="app_name">REBIS</string>
    <string name="title_profile">Profile</string>
    <string name="title_QRScan">QR-Scan</string>
    <string name="title_history">History</string>

    <string name="wallets">Ethereum Wallet</string>
    <string name="mainwal">&#8226; Change Current Address &#8226;</string>
    <string name="addwal">&#8226; Add an Address &#8226;</string>
    <string name="currentwal">Current Address:</string>
    <string name="idenfitification">Online Identification</string>
    <string name="logouter">Logout</string>
    <string name="usrtp">Account type: </string>

    <string name="sectHist_title">Rental History</string>

    <string name="tapHint">Tap the image below to begin a new scan</string>

    <string name="email_address">email address</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an Account?</string>
    <string name="passw_forgotten">Forgot your Password?</string>
    <string name="version">Version 1.0.0</string>
    <string name="password">password</string>

    <string name="register">Register</string>
    <string name="confpassw">confirm password</string>
    <string name="got_account">Already have an Account?</string>
    <string name="username">username</string>

    <string name="wa_actual">Current address:</string>
    <string name="wa_others">All your addresses:</string>

    <string name="add_wallet">Add an Address</string>
    <string name="adwahint">Insert the new address</string>
    <string name="add_hint">address</string>
    <string name="addW">add</string>
    <string name="emptyadd">No addresses selected yet.</string>

    <string name="reqr_title">Rental Transaction</string>

    <string name="rose_title">CREATE AN ACCOUNT</string>
    <string name="rose_desc">what type of user are you?</string>
    <string name="rose_ch1">Customer</string>
    <string name="rose_ch2">Seller</string>

    <string name="title_QRRENTER">Transaction</string>
    <string name="qrre_desc">Create a new Transaction</string>
    <string name="qrre_bike">BIKE:</string>
    <string name="qrre_fee">FEE: (ETH)</string>
    <string name="qrre_deposit">DEPOSIT: (ETH)</string>
    <string name="qrre_days">DAYS OF RENTAL:</string>
    <string name="qrre_comm">GENERATE TRANSACTION</string>

    <string name="rgre_store">store name</string>
    <string name="rgre_proceed">Proceed</string>

    <string name="stin_title">Store Details</string>
    <string name="stin_owner">Owner:</string>
    <string name="stin_country">Country:</string>
    <string name="stin_zip">Postal Code:</string>
    <string name="stin_addr">Address:</string>
    <string name="stin_city">City:</string>
    <string name="stin_phone">Phone Number:</string>
    <string name="signup">sign up</string>
    <string name="stin_tellus">Tell us something about your store</string>
    <string name="stin_failed">Registration failed!</string>
    <string name="stin_errNA">Input a valid name</string>
    <string name="stin_errCO">Input a valid Country</string>
    <string name="stin_errAD">Input a valid address</string>
    <string name="stin_errCI">Input a valid City</string>
    <string name="stin_errZI">Input a valid postal-code</string>
    <string name="stin_errNU">Input a valid phone number</string>

    <string name="welc_title">Welcome To REBIS</string>
    <string name="welc_desc">Hello, </string>
    <string name="welc_type">You logged in as a: </string>
    <string name="welc_proceed">Select an Activity!</string>

    <string name="oi_title">Personal Identification</string>
    <string name="oi_uname">Name:</string>
    <string name="oi_ulastname">Last Name:</string>
    <string name="oi_ucountry">Country:</string>
    <string name="oi_ugender">Gender:</string>
    <string name="oi_umale">Male</string>
    <string name="oi_ufemale">Female</string>
    <string name="oi_ubirth">Birth Date:</string>
    <string name="oi_ucity">City:</string>
    <string name="oi_uadddress">Home Address:</string>
    <string name="oi_upostal">Postal Code:</string>
    <string name="oi_unumber">Phone Number:</string>
    <string name="oi_identify">Identify</string>
    <string name="oi_proceed1">&#10173; PROCEED &#10173;</string>
    <string name="oi_noho">No.</string>
    <string name="oi_3desc">You are almost there! Just a last step&#8230;\n We need a photo of your ID card to verify your data.
                            \nDon\'t worry, your personal data wont\'t be shared with anyone!
                            \n Please, provide a clear picture of both front and rear side of the document.</string>
    <string name="oi_complete">COMPLETE! &#10004;</string>
    <string name="oi_statusx">No images added yet. \nPlease, pick one.</string>
    <string name="oi_statusv">You selected an image.\n</string>

    <string name="ver_email">E-mail sent to your address!</string>
    <string name="reg_entall">Enter all the fields.</string>
    <string name="reg_paswmis">Passwords mismatch.</string>
    <string name="reg_failedtoreg">Failed to register.</string>
    <string name="reg_pwdlength">Password length must be at least 8</string>
    <string name="reg_pwdlowercase">Password requires a lowercase letter</string>
    <string name="reg_pwduppercase">Password requires an uppercase letter</string>
    <string name="log_failedto">Failed to Login.</string>
    <string name="reg_alreadytkn">Username already taken</string>

    <string name="aldi_title">Deleting an Address</string>
    <string name="aldi_usure">You are going to remove:</string>

    <string name="hsmd_fee">Fee:</string>
    <string name="hsmd_depo">Deposit:</string>
    <string name="hsmd_days">Days:</string>
    <string name="hsmd_num">Number:</string>

    <string name="core_fail">Generation failed!</string>

    <string name="hire_empty">Not rented yet</string>

    <string name="al1_tit">Complete Transaction</string>
    <string name="al1_msg">Are you sure you want to complete the transaction and pay ETH:</string>
    <string name="al2_tit">Delete rental</string>
    <string name="al2_msg">Do you want to remove this pending rental operation?</string>
    <string name="al3_ok">OK</string>
    <string name="al3_tit">Personal Identification</string>
    <string name="al3_msg">You successfully completed the form.\nYour data will be checked soon.</string>

    <string name="trx_failed">Transaction Failed!</string>
    <string name="trx_suxes">Transaction Succedeed, PAYED:</string>
    <string name="trx_endOK">Ended - Deposit Cashback: </string>

    <string name="oi_errorName">Invalid name</string>
    <string name="oi_errorSurname">Invalid surname</string>
    <string name="oi_errorCountry">Please, choose your Country</string>
    <string name="oi_errorDate">Invalid date</string>
    <string name="oi_error">An error occurred, check all fields and try again.</string>
    <string name="oi_errorCity">Invalid City</string>
    <string name="oi_errorCode">Invalid postal-code</string>
    <string name="oi_errorAddress">Invalid address</string>
    <string name="oi_errorNoho">Invalid home number</string>
    <string name="oi_errorNumber">Invalid phone number</string>
    <string name="oi_errorImg">Please, select an image.</string>

    <string name="ecv_aboutUser">User Identification</string>
    <string name="ecv_endRental">End Rental</string>

    <string name="cddr_tit">Delete Transaction</string>
    <string name="cddr_msg">Are you sure you want to delete this pending transaction?</string>
    <string name="cddr_bYes">Yes</string>
    <string name="cddr_bNo">No</string>

    <string name="fyp_title">Password Reset</string>
    <string name="fyp_desc">To reset your password, type below your E-Mail address.\n
                            An E-Mail will be sent to your account.</string>
    <string name="fyp_butt">RESET</string>
    <string name="fyp_success">Recovery email sent!</string>
    <string name="fyp_failed">Input data aren\'t correct!</string>

    <string name="cdOK_title">Transaction error</string>
    <string name="cdOK1_msg">Please, provide a valid ETH address before proceeding with transactions.</string>
    <string name="cdOK2_msg">Please, you must identify yourself before proceeding with transactions.</string>
    <string name="cdOK3_msg">An error occurred, check your data and try again.</string>

    <string name="title_bikes">Bikes</string>

    <string name="oid_ruoidded">Update Personal Info</string>

    <string name="adb_title">Add a Bike</string>
    <string name="adb_brand">Brand</string>
    <string name="adb_model">Model</string>
    <string name="adb_value">Value (euro)</string>
    <string name="adb_year">Year</string>
    <string name="adb_image">Image</string>

    <string name="adb_errorMO">Invalid input for \'model\'</string>
    <string name="adb_errorBR">Invalid input for \'brand\'</string>
    <string name="adb_errorYE">Invalid input for \'year\'</string>
    <string name="adb_errorVA">Invalid input for \'value\'</string>
    <string name="adb_errorIM">Please, provide a picture of the bike.</string>
    <string name="adb_errorGE">Something wrent wrong, check your data and try again.</string>
    <string name="adb_errorFORB">Forbidden characters: \'.\', \'$\', \'[\', \']\', \'#\', \'/\'</string>
    <string name="generic_error">Something went wrong.</string>

    <string name="invalid_number">Input a valid number</string>
    <string name="invalid_deposit">Deposit will be set to \'0\'</string>

    <string name="bike_all">ALL</string>
    <string name="bike_availb">Available</string>
    <string name="bike_unavailb">Unavailable</string>

    <string name="ntf_title">Notifications</string>
    <string name="ntf_nonotfs">There are no new notifications.</string>

    <string name="ni_rentaldate">Rent.Date:</string>
    <string name="ni_expdate">Exp.Date:</string>
    <string name="ni_calll">CALL</string>

    <string name="adwa_pubadr">Type below the PUBLIC address</string>
    <string name="adwa_mnemo">Type below the MNEMONIC of your wallet</string>
    <string name="adwa_hintMne">mnemonic passphrase</string>
    <string name="adwa_new">Add a new address</string>

    <string name="txmm_title">Verifying Transaction</string>
    <string name="txmm_desc">Your transaction is now \nbeing processed.\nIt may take up to 40 seconds depending on the chain net.
                                \nYou can leave this page.</string>
    <string name="txmm_menu">Go back to Menu</string>
    <string name="txmm_retry">Repeat the Transaction</string>
    <string name="txmm_trybut">&#8634;</string>
    <string name="txmm_menubut">&#9750;</string>
    <string name="txmm_trybuthint">Try again</string>
    <string name="txmm_menubuthint">Home page</string>

    <string name="adwa_onlyreceiver">This will be ONLY your RECEIVING address. Here you\'ll receive your deposit back in case of need.
                You can change this anytime.</string>

    <string name="title_book">Book a bike</string>
    <string name="title_booking">Booking</string>

    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="dr_wallets">Wallet</string>
    <string name="dr_identf">Online Identification</string>
    <string name="dr_logout">Logout</string>
    <string name="dr_exit">Exit</string>

    <string name="not_title">Notifications</string>

    <string name="exbo_title">Book a bike</string>
    <string name="exbo_uknow">Do you know this store?</string>
    <string name="exbo_book">Available bikes</string>

    <string name="adbo_title">Book this bike</string>
    <string name="adbo_msg">Do you want to book the selected bike for the next 3 hours?</string>

    <string name="cdbk_nop">Unable to complete the action</string>
    <string name="cdbk_yep">Bike successfully booked</string>
    <string name="exbo_stars">Rating saved!</string>

    <string name="bkbk_nobookings">No bookings yet</string>

</resources>
