<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_history">

    <fragment
        android:id="@+id/navigation_QRScan"
        android:name="com.pjt.rebis.ui.qrScan.QRCodeFragment"
        android:label="@string/title_QRScan"
        tools:layout="@layout/fragment_qrscan" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.pjt.rebis.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_newqrRENTER"
        android:name="com.pjt.rebis.ui.qrScan.QRcodeRenter"
        android:label="@string/title_QRRENTER"
        tools:layout="@layout/fragment_qrcode_renter" />

    <fragment
        android:id="@+id/navigation_bikes"
        android:name="com.pjt.rebis.ui.bikes.bikesFragment"
        android:label="@string/title_bikes"
        tools:layout="@layout/fragment_bikes" />

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.pjt.rebis.ui.booking.bike_booking"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_bike_booking" />

</navigation>