<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".authentication.Login">

    <EditText
        android:id="@+id/log_email"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/edittxt_cont"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/panna"
        android:textColorHighlight="@color/panna_hint"
        android:textColorHint="@color/panna_hint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_title"
        tools:targetApi="o" />

    <Button
        android:id="@+id/log_signin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:background="@color/transparent"
        android:fontFamily="@font/sanchez"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/login"
        android:stateListAnimator="@null"
        android:textAlignment="center"
        android:textColor="@color/panna"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_password" />

    <TextView
        android:id="@+id/log_toregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textColor="@color/panna"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/log_lostpassw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:text="@string/passw_forgotten"
        android:textAlignment="center"
        android:textColor="@color/panna"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_signin" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittxt_cont"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/panna"
        android:textColorHighlight="@color/panna_hint"
        android:textColorHint="@color/panna_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_email" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/merienda_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/panna"
        android:textSize="40sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log_vers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/allan"
        android:text="@string/version"
        android:textColor="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>