<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintrgRE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Authentication.RegisterRenter">

    <TextView
        android:id="@+id/rgRE_tologin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/got_account"
        android:textAlignment="center"
        android:textColor="@color/panna"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRE_signup" />

    <TextView
        android:id="@+id/rgRE_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/merienda_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/panna"
        android:textSize="40sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rgRE_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="50dp"
        android:background="@color/transparent"
        android:fontFamily="@font/sanchez"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:stateListAnimator="@null"
        android:text="@string/rgre_proceed"
        android:textAlignment="center"
        android:textColor="@color/panna"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRE_copass" />

    <EditText
        android:id="@+id/rgRE_pass"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittxt_cont"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/panna"
        android:textColorHighlight="@color/panna_hint"
        android:textColorHint="@color/panna_hint"
        android:textColorLink="@color/panna_hint"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRE_storename" />

    <EditText
        android:id="@+id/rgRE_email"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/edittxt_cont"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/panna"
        android:textColorHighlight="@color/panna_hint"
        android:textColorHint="@color/panna_hint"
        android:textColorLink="@color/panna_hint"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRE_title"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/rgRE_copass"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittxt_cont"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/confpassw"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/panna"
        android:textColorHighlight="@color/panna_hint"
        android:textColorHint="@color/panna_hint"
        android:textColorLink="@color/panna_hint"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRE_pass" />

    <EditText
        android:id="@+id/rgRE_storename"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittxt_cont"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/rgre_store"
        android:padding="15dp"
        android:textColor="@color/panna"
        android:textColorHighlight="@color/panna_hint"
        android:textColorHint="@color/panna_hint"
        android:textColorLink="@color/panna_hint"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRE_email" />

</androidx.constraintlayout.widget.ConstraintLayout>